force-app/main/default/objects/Order_Line_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>