force-app/main/default/objects/Order_Line_Item__c/fields/Total_Units_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Price__c</fullName>
    <formula>Quantity__c *   Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Units Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>