force-app/main/default/objects/Order_Line_Item__c/validationRules/Quantity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Product__r.Quantity__c &lt;  Quantity__c</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Sorry, The selected Quantity is not available</errorMessage>
</ValidationRule>